--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
                 <div class="col-1">
                     <img src="images/img04.jpg">
                 </div>
-                <div class="col-1">
+                <div id="title" class="col-1">
                     <h1>Title</h1>
                 </div>
-                <div class="col-1">
+                <div id="subtitle" class="col-1">
                     <p>Subtitle</p>
                 </div>
             </div>
@@ -42,7 +42,17 @@
                         diam tellus, ut volutpat lorem commodo ut. Mauris eget urna nec purus placerat mollis. Nunc
                         consectetur sagittis euismod. Etiam
                         mollis
-                        diam tellus, ut volutpat lorem commodo ut. </p>
+                        diam tellus, ut volutpat lorem commodo ut.
+                        Mauris eget urna nec purus placerat mollis. Nunc
+                        consectetur sagittis euismod. Etiam
+                        mollis
+                        diam tellus, ut volutpat lorem commodo ut. Mauris eget urna nec purus placerat mollis. Nunc
+                        consectetur sagittis euismod. Etiam
+                        mollis
+                        diam tellus, ut volutpat lorem commodo ut. Mauris eget urna nec purus placerat mollis. Nunc
+                        consectetur sagittis euismod. Etiam
+                        mollis
+                        diam tellus, ut volutpat lorem commodo ut.</p>
                 </div>
             </div>
         </div>
@@ -53,23 +63,69 @@
             <div class="row">
                 <div class="col-4"></div>
                 <div class="col-8">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sed gravida nisl.
-                        Suspendisse potenti. Nulla molestie nibh vulputate, convallis purus sit amet, bibendum
-                        velit. Cras et odio ante. Aenean imperdiet blandit tincidunt. Suspendisse lorem est,
-                        aliquam
-                        eget lacinia et, varius nec erat. Integer convallis tempus arcu sit amet gravida. Aenean
-                        iaculis lacus magna, non lacinia orci varius quis. Phasellus id convallis justo. Vivamus
-                        porta urna quis pretium ultrices. Donec id mauris nibh. Vivamus sit amet mauris magna.
-                        Mauris eget urna nec purus placerat mollis. Nunc consectetur sagittis euismod. Etiam
-                        mollis
-                        diam tellus, ut volutpat lorem commodo ut. </p>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col">
+                                <h1>Welcome To My Website</h1>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col subtext">
+                                <p>Posted on August 23th, 2007 by <a href="#">admin</a> | <a href="#">Edit</a></p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col">
+                                <p>Mauris eget urna nec purus placerat mollis. Nunc
+                                    consectetur sagittis euismod. Etiam
+                                    mollis
+                                    diam tellus, ut volutpat lorem commodo ut. Mauris eget urna nec purus placerat
+                                    mollis. Nunc
+                                    consectetur sagittis euismod. Etiam
+                                    mollis
+                                    diam tellus, ut volutpat lorem commodo ut.</p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col comments">
+                                <p><a href="#">Read More</a> <a href="#">Comments</a>(33)</p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col">
+                                <h1>Sample Text</h1>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col subtext">
+                                <p>Posted on August 23th, 2007 by <a href="#">admin</a> | <a href="#">Edit</a></p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col">
+                                <p>Mauris eget urna nec purus placerat mollis. Nunc
+                                    consectetur sagittis euismod. Etiam
+                                    mollis
+                                    diam tellus, ut volutpat lorem commodo ut. Mauris eget urna nec purus placerat
+                                    mollis. Nunc
+                                    consectetur sagittis euismod. Etiam
+                                    mollis
+                                    diam tellus, ut volutpat lorem commodo ut.</p>
+                            </div>
+                        </div>
+                        <div class="row comments">
+                            <div class="col">
+                                <p><a href="#">Read More</a> <a href="#">Comments</a>(33)</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
     <div id="bottom-spacer">
         <div id="footer" class="container">
-            <p>(C)2007 All Rights Reserved - Designed by <a>a designer</a> - Icons by <a>paint</a></p>
+            <p>(C)2007 All Rights Reserved - Designed by <a href="#">a designer</a> - Icons by <a href="#">paint</a></p>
         </div>
     </div>
 </body>
