--- a/index.html
+++ b/index.html
@@ -27,32 +27,84 @@
         <div id="header" class="container">
             <div class="row">
                 <div id="sidebar" class="col-4">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sed gravida nisl.
-                        Suspendisse potenti. Nulla molestie nibh vulputate, convallis purus sit amet, bibendum
-                        velit. Cras et odio ante. Aenean imperdiet blandit tincidunt. Suspendisse lorem est,
-                        aliquam
-                        eget lacinia et, varius nec erat. Integer convallis tempus arcu sit amet gravida. Aenean
-                        iaculis lacus magna, non lacinia orci varius quis. Phasellus id convallis justo. Vivamus
-                        porta urna quis pretium ultrices. Donec id mauris nibh. Vivamus sit amet mauris magna.
-                        Mauris eget urna nec purus placerat mollis. Nunc consectetur sagittis euismod. Etiam
-                        mollis
-                        diam tellus, ut volutpat lorem commodo ut. Mauris eget urna nec purus placerat mollis. Nunc
-                        consectetur sagittis euismod. Etiam
-                        mollis
-                        diam tellus, ut volutpat lorem commodo ut. Mauris eget urna nec purus placerat mollis. Nunc
-                        consectetur sagittis euismod. Etiam
-                        mollis
-                        diam tellus, ut volutpat lorem commodo ut.
-                        Mauris eget urna nec purus placerat mollis. Nunc
-                        consectetur sagittis euismod. Etiam
-                        mollis
-                        diam tellus, ut volutpat lorem commodo ut. Mauris eget urna nec purus placerat mollis. Nunc
-                        consectetur sagittis euismod. Etiam
-                        mollis
-                        diam tellus, ut volutpat lorem commodo ut. Mauris eget urna nec purus placerat mollis. Nunc
-                        consectetur sagittis euismod. Etiam
-                        mollis
-                        diam tellus, ut volutpat lorem commodo ut.</p>
+                    <div class="row">
+                        <div class="col">
+                            <h2><img src="/images/img08.jpg"> Categories</h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <ul>
+                                <li>
+                                    <a href="#">urna nec purus placerat</a>
+                                </li>
+                                <li>
+                                    <a href="#">urna nec purus placerat</a>
+                                </li>
+                                <li>
+                                    <a href="#">urna nec purus placerat</a>
+                                </li>
+                                <li>
+                                    <a href="#">urna nec purus placerat</a>
+                                </li>
+                                <li>
+                                    <a href="#">urna nec purus placerat</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <h2><img src="/images/img08.jpg">Blogroll</h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <ul>
+                                <li>
+                                    <a href="#">urna nec purus placerat</a>
+                                </li>
+                                <li>
+                                    <a href="#">urna nec purus placerat</a>
+                                </li>
+                                <li>
+                                    <a href="#">urna nec purus placerat</a>
+                                </li>
+                                <li>
+                                    <a href="#">urna nec purus placerat</a>
+                                </li>
+                                <li>
+                                    <a href="#">urna nec purus placerat</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <h2><img src="/images/img08.jpg">Archives</h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <ul>
+                                <li>
+                                    <a href="#">urna nec purus placerat</a>
+                                </li>
+                                <li>
+                                    <a href="#">urna nec purus placerat</a>
+                                </li>
+                                <li>
+                                    <a href="#">urna nec purus placerat</a>
+                                </li>
+                                <li>
+                                    <a href="#">urna nec purus placerat</a>
+                                </li>
+                                <li>
+                                    <a href="#">urna nec purus placerat</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
